
=== (next) ===
NEW: log level support for ConsoleFace

=== 1.0.0 (2019-11-17) ===
Initial release