@@ -21,8 +21,28 @@
 
 const ConsoleFace = require( '../ConsoleFace' );
 
+/**
+ * Initial client
+ * @param {AsyncSteps} asi - async steps interface
+ * @param {SimpleCCM} ccm - CCM interface
+ * @param {object} [options] - options
+ * @param {string} [options.logType] - type of logger
+ */
+const initFace = ( asi, ccm, options = {} ) => {
+    let Impl = ConsoleFace;
+
+    switch ( options.logType ) {
+    case 'console':
+    default:
+            // use the default
+    }
+
+    Impl.register( asi, ccm, options );
+};
+
 exports = module.exports = {
     ConsoleFace,
+    initFace,
 };
 
 Object.freeze( exports );
